modes functionality added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="logo">Magic Notes App</div>
     <ul class="search-bar">
     <li><input type="search" placeholder="Search Note Text" id="searchTxt"></li>
-    <!-- <li><button id="searchBtn">Search</button></li> -->
+    <li><button id="mode">Light Mode</button></li>
   </ul>
   </nav>
 
